Update PomFileUpdater.java